fixed sub title overflow in mobile view

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -106,6 +106,13 @@
     font-size: 2em;
 }
 
+#sub-title {
+    position: absolute;
+    top: 40px;
+    width: 300px;
+    margin-top: 5px;
+}
+
   #title h4 {
     font-size: 1em;
 }
